<resources>
    <string name="app_name">HabitQuestTNUV</string>
    <string name="daysStreakName">days</string>
    <string name="streak">STREAK</string>
    <string name="levelProfile">Level</string>
    <string name="LevelExample">14</string>
    <string name="StreakExample">22</string>
    <string name="PlayerNameTest">NejcMihelovcevski</string>
    <string name="PlayerTitleTest">"The Beginner of Riften"</string>
    <string name="habits_goodhabits">Good habits</string>
    <string name="habits_levelcount">Level 14</string>
    <string name="habits_habitname">Running</string>
    <string name="habits_habitdesc">For at least 30 min</string>
    <string name="habits_focus">Focus</string>
    <string name="habits_focusmultiplierstart">2x</string>
    <string name="habits_focusmultipliercurrent">2.4x</string>
    <string name="habits_focusmultipliernext">3x</string>
    <string name="habits_focusmultipliervalue">+0.2x/day</string>
    <string name="habits_add_new_good_habit">+ Add a new good habit</string>
    <string name="habits_add_new_bad_habit">+ Add a new bad habit</string>
    <string name="habits_hp">HP</string>
    <string name="habits_hpcurrent">40</string>
    <string name="habits_hphigh">100</string>
    <string name="habits_hplow">0</string>
    <string name="habits_badhabits">Bad habits</string>
    <string name="habits_badhabitname">Stop smoking</string>
    <string name="habits_badhabitdesc">Reduce tobacco usage to 0</string>
    <string name="habits_hpmultipliervalue">+5 HP/day</string>
    <string name="habits_dailytasks">Daily tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minXpExample">1000</string>
    <string name="MaxXpExample">1200</string>
    <string name="ActualXpExample">1120 XP</string>
    <string name="profileMenuTitle">Profile</string>
    <string name="exampleLeftFocusProfile">2x</string>
    <string name="exampleMiddleFocusProfile">2.4x</string>
    <string name="focusTextRightExample">3x</string>
    <string name="eventMenuTitle">Event</string>
    <string name="habits_eventraid">Event raid</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="health_points">Health points</string>
    <string name="add_a_new_bad_habit">Add a new bad habit</string>
    <string name="choose_from_existing">Choose from existing</string>
    <string name="or">OR</string>
    <string name="enter_your_own">Enter your own</string>
    <string name="add_a_new_good_habit">Add a new good habit</string>
    <string name="focus_multiplier">Focus multiplier</string>
    <string name="x_day">x/day</string>
    <string name="xp">XP</string>
    <string name="per_day">/day</string>
    <string name="add_habit">Add habit</string>
    <string name="cancel">Cancel</string>
    <string name="hp_day">HP/day</string>
    <string name="choose_type">Choose type</string>
    <string name="add_a_new_daily_task">Add a new daily task</string>
    <string name="add_task">Add task</string>

    <string-array name="dailytypes">
        <item>Warmup</item>
        <item>Planned</item>
        <item>Cooldown</item>
    </string-array>


    <string-array name="titles">
        <item>Peace Promoter</item>
        <item>Health Advocate</item>
        <item>Education Champion</item>
        <item>Cultural Connector</item>
        <item>Human Rights Defender</item>
        <item>World Heritage Hero</item>
        <item>Food Security Supporter</item>
        <item>Mental Health Ally</item>
        <item>Indigenous Advocate</item>
        <item>Women\'s Rights Champion</item>
        <item>Hunger Fighter</item>
        <item>Volunteer Leader</item>
        <item>Friendship Builder</item>
        <item>Science Enthusiast</item>
        <item>Sports Enthusiast</item>
        <item>Anti-Tobacco Advocate</item>
        <item>Humanitarian Hero</item>
        <item>Happiness Ambassador</item>


    </string-array>

    <string-array name="titlesDesc">
        <item>(earned by organizing a peace rally on International Day of Peace)</item>
        <item>(earned by hosting a health fair on World Health Day)</item>
        <item>(earned by conducting a literacy drive on International Literacy Day)</item>
        <item>(earned by organizing a cultural exchange event on World Cultural Diversity Day)</item>
        <item>(earned by raising awareness on Human Rights Day)</item>
        <item>(earned by visiting 10 UNESCO World Heritage Sites on World Heritage Day)</item>
        <item>(earned by volunteering at a food bank on World Food Day)</item>
        <item>(earned by organizing a mental health awareness seminar on World Mental Health Day)</item>
        <item>(earned by promoting indigenous cultures on International Day of the World\'s Indigenous Peoples)</item>
        <item>(earned by leading a campaign for gender equality on International Women\'s Day)</item>
        <item>(earned by participating in a meal packaging event on World Hunger Day)</item>
        <item>(earned by organizing a volunteer event on International Volunteer Day)</item>
        <item>(earned by fostering international friendships on International Friendship Day)</item>
        <item>(earned by promoting science education on World Science Day for Peace and Development)</item>
        <item>(earned by hosting a sports event on International Day of Sport for Development and Peace)</item>
        <item>(earned by leading an anti-smoking campaign on World No Tobacco Day)</item>
        <item>(earned by providing aid during a crisis on World Humanitarian Day)</item>
        <item>(earned by spreading joy on International Day of Happiness)</item>

    </string-array>

    <string-array name="upperClotheName">
        <item>Jerkin of Saltshore</item>
        <item>Garb of Riptide2</item>
        <item>Cloak of Stormwatch</item>
        <item>Vestment of Deepwave</item>
        <item>Mantle of Driftwood</item>


    </string-array>

    <string-array name="faceName">
        <item>Quirky</item>
        <item>Angry</item>
        <item>Bruh</item>
        <item>Lovely</item>
        <item>Horny</item>


    </string-array>

    <string-array name="lowerClotheName">
        <item>Pants of the dragon</item>
        <item>Kilt of swinging in the breeze</item>
        <item>The Femboy</item>
        <item>The Boyfem</item>
        <item>Major pants general</item>
    </string-array>

    <string-array name="hairClotheName">
        <item>The blondie</item>
        <item>Karen Maker</item>
        <item>Town Trouble</item>
        <item>Surprise me Barber</item>
        <item>The confusion</item>
    </string-array>

    <string-array name="skinClotheName">
        <item>Uhmmm heh</item>
        <item>It\'s kinda</item>
        <item>Racist to just</item>
        <item>Call a skin</item>
        <item>Yellow :D</item>
    </string-array>

    <string-array name="weaponClotheName">
        <item>The sword of Hyrule</item>
        <item>Immolation magic</item>
        <item>Bow of assasination</item>
        <item>Death Grip</item>
        <item>The purple violator</item>
    </string-array>

</resources>