<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/habit_good"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kumbh_sans_bold"
                android:text="@string/habits_goodhabits"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kumbh_sans"
                android:text="@string/habits_levelcount"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="5sp"
            android:layout_weight="1"
            android:fontFamily="@font/kumbh_sans"
            android:text="@string/habits_focus"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="40"
            android:progressBackgroundTint="#FFFFFF"
            android:progressBackgroundTintMode="add"
            android:progressTint="@color/yellow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kumbh_sans"
                android:text="@string/habits_focusmultiplierstart"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kumbh_sans"
                android:text="@string/habits_focusmultipliercurrent"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kumbh_sans"
                android:text="@string/habits_focusmultipliernext"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_radius"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:fontFamily="@font/kumbh_sans"
                    android:text="@string/habits_habitname"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kumbh_sans"
                    android:radius="10sp"
                    android:text="@string/habits_habitdesc"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="73dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:foregroundTint="#000000"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="V"
                android:textColor="#000000"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>